    - Update Vcs-Bzr, Vcs-Browser and add a notice to uploaders.
    - Remove outdated Breaks:.
  * debian/rules:
    - Convert to dh9; some variables where kept but renamed to brevity.
    - Override dh_autoreconf to make sure it calls autogen.sh, and doesn't run
      configure.
    - Clean up unnecessary files we don't want to install, so that dh_install
      can complete.
  * debian/compat: bump to compat level 9.
  * debian/libdbusmenu-gtk-doc.install: add the glib-server-nomenu.c example.
  * debian/libdbusmenu-tools.install: install dbusmenu-* binaries from the
    multiarch triplet rather than usr/lib/libdbusmenu.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 21 Nov 2012 13:17:02 -0500

libdbusmenu (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release.

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Oct 2012 21:23:18 +0200

libdbusmenu (12.10.1-0ubuntu2) quantal-proposed; urgency=low

  * Backport upstream fix for segfault issue (lp: #1053670)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 24 Sep 2012 21:36:35 +0200

libdbusmenu (12.10.1-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - Honor changes to GtkSettings' gtk-menu-images value (LP: #927236)
    - don't display an underscore on menuitimes containing a '&' (LP: #994564)
    - set the widget for the accelerator even if there isn't a mnemonic
      (LP: #982656)
    - Some platforms don't have valgrind, so treat those unit tests separately
    - make headers match independent of the build directory
    - constify some public API calls

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Sep 2012 19:22:52 +0200

libdbusmenu (0.6.2-0ubuntu1) quantal; urgency=low

  * New upstream release.
    * Fixed duplicated underscores in menus (LP: #979301)
    * Fix for keybindings not showing in menus bug (LP: #982656)
    * DbusmenuServer leaks private string (LP: #981766)
    * Ensure menuitems with '&' show them properly (LP: #994564)
